Refactor ManageAnalyzeStockService to use StockProviderPort; update method names and signatures for consistency. Enhance Stock model with logoUrl field and update related mappers and repositories. Introduce new analysis HTML template for improved UI.